--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Numbers Game</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" href="text_number.jpg" type="image/x-icon">
 </head>
 <body>
   <div id="container">
