--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div id="timer">0.0</div>
     <ul id="board"></ul>
     <div id="btn">Start</div>
-    <p></p>
+    <p id="text">０から順にボタンを押してください</p>
+    <!-- <button id="reset">Reset</button> -->
+
   </div>
   <script src="js/main.js"></script>
 </body>
